--- a/dev/yes-and-no-unsloth.ipynb
+++ b/dev/yes-and-no-unsloth.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -60,13 +60,13 @@
      "text": [
       "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n",
       "🦥 Unsloth Zoo will now patch everything to make training faster!\n",
-      "Started service on localhost:8089 (PID: 110345)\n"
+      "Started service on localhost:8089 (PID: 16907)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df79d4a32e374c659af02f7a4e9fc562",
+       "model_id": "ccbc2b3c57784bcd8c60abbd4e48e9ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -100,7 +100,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/home/gcpuser/sky_workdir/dev/wandb/run-20250327_221518-yes-or-no-unsloth-001</code>"
+       "Run data is saved locally in <code>/home/gcpuser/sky_workdir/dev/wandb/run-20250328_014441-yes-or-no-unsloth-001</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -153,155 +153,18 @@
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2882c40dd5d74afd9c1dd25331092ec9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "train:   0%|          | 0/1152 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prepared tuning data with 2 sequences of length 8192\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c798db1eef59450d9545d33c6c004c92",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "train:   0%|          | 0/1152 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prepared tuning data with 1 sequences of length 8192\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18c823afd9114c689d6e20b64817cb7e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "train:   0%|          | 0/1152 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prepared tuning data with 1 sequences of length 8192\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02c3730f93c740a0b70c4aec12bc02be",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "train:   0%|          | 0/1152 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prepared tuning data with 1 sequences of length 8192\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9a3f8710d224c128e92dba9aa228731",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "train:   0%|          | 0/1152 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prepared tuning data with 1 sequences of length 8192\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc9c94de90ef462a949cb0e91049d1aa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "train:   0%|          | 0/1152 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prepared tuning data with 3 sequences of length 8192\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1b181d0075d4215a801b31fcac6e0ff",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "train:   0%|          | 0/1152 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "CancelledError",
-     "evalue": "",
+     "ename": "HTTPStatusError",
+     "evalue": "Client error '422 Unprocessable Entity' for url 'http://localhost:8089/tune'\nFor more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/422",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mCancelledError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 43\u001b[39m\n\u001b[32m     39\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m model.openai_client(\n\u001b[32m     40\u001b[39m     estimated_completion_tokens=\u001b[32m16\u001b[39m, verbosity=\u001b[32m2\u001b[39m\n\u001b[32m     41\u001b[39m ) \u001b[38;5;28;01mas\u001b[39;00m openai_client:\n\u001b[32m     42\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28;01mawait\u001b[39;00m model.get_iteration(), \u001b[32m1_000\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m43\u001b[39m         train_groups = \u001b[38;5;28;01mawait\u001b[39;00m art.gather_trajectories(\n\u001b[32m     44\u001b[39m             (\n\u001b[32m     45\u001b[39m                 (rollout(openai_client, prompt) \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m32\u001b[39m))\n\u001b[32m     46\u001b[39m                 \u001b[38;5;28;01mfor\u001b[39;00m prompt \u001b[38;5;129;01min\u001b[39;00m [\n\u001b[32m     47\u001b[39m                     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprefix\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m with \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m, \u001b[39m\u001b[33m'\u001b[39m.join([\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mw\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mif\u001b[39;00m\u001b[38;5;250m \u001b[39muse_quotes\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01melse\u001b[39;00m\u001b[38;5;250m \u001b[39mw\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mfor\u001b[39;00m\u001b[38;5;250m \u001b[39mw\u001b[38;5;250m \u001b[39m\u001b[38;5;129;01min\u001b[39;00m\u001b[38;5;250m \u001b[39mwords])\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mif\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28mlen\u001b[39m(words)\u001b[38;5;250m \u001b[39m==\u001b[38;5;250m \u001b[39m\u001b[32m3\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01melse\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mwords[\u001b[32m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[38;5;250m \u001b[39m+\u001b[38;5;250m \u001b[39m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33m or \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mwords[\u001b[32m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mif\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28mlen\u001b[39m(words)\u001b[38;5;250m \u001b[39m>\u001b[38;5;250m \u001b[39m\u001b[32m1\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01melse\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[33m'\u001b[39m\u001b[33m'\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m     48\u001b[39m                     \u001b[38;5;28;01mfor\u001b[39;00m prefix \u001b[38;5;129;01min\u001b[39;00m [\u001b[33m\"\u001b[39m\u001b[33mrespond\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mjust respond\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m     49\u001b[39m                     \u001b[38;5;28;01mfor\u001b[39;00m use_quotes \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;28;01mFalse\u001b[39;00m]\n\u001b[32m     50\u001b[39m                     \u001b[38;5;28;01mfor\u001b[39;00m words \u001b[38;5;129;01min\u001b[39;00m [\n\u001b[32m     51\u001b[39m                         [\u001b[33m\"\u001b[39m\u001b[33myes\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mno\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mmaybe\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m     52\u001b[39m                         [\u001b[33m\"\u001b[39m\u001b[33mmaybe\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33myes\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mno\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m     53\u001b[39m                         [\u001b[33m\"\u001b[39m\u001b[33mno\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33myes\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mmaybe\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m     54\u001b[39m                         [\u001b[33m\"\u001b[39m\u001b[33myes\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mmaybe\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mno\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m     55\u001b[39m                         [\u001b[33m\"\u001b[39m\u001b[33myes\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mno\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m     56\u001b[39m                         [\u001b[33m\"\u001b[39m\u001b[33mmaybe\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mno\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m     57\u001b[39m                         [\u001b[33m\"\u001b[39m\u001b[33mno\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mmaybe\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m     58\u001b[39m                         [\u001b[33m\"\u001b[39m\u001b[33mno\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33myes\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m     59\u001b[39m                         [\u001b[33m\"\u001b[39m\u001b[33myes\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mno\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m     60\u001b[39m                     ]\n\u001b[32m     61\u001b[39m                 ]\n\u001b[32m     62\u001b[39m             ),\n\u001b[32m     63\u001b[39m             pbar_desc=\u001b[33m\"\u001b[39m\u001b[33mtrain\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     64\u001b[39m             stream_chat_completions=\u001b[32m8\u001b[39m,\n\u001b[32m     65\u001b[39m         )\n\u001b[32m     66\u001b[39m         \u001b[38;5;28;01mawait\u001b[39;00m model.tune(\n\u001b[32m     67\u001b[39m             train_groups,\n\u001b[32m     68\u001b[39m             config=art.TuneConfig(\n\u001b[32m     69\u001b[39m                 sequence_length=\u001b[32m8192\u001b[39m, plot_tensors=\u001b[38;5;28;01mFalse\u001b[39;00m, verbosity=\u001b[32m2\u001b[39m\n\u001b[32m     70\u001b[39m             ),\n\u001b[32m     71\u001b[39m         )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/sky_workdir/src/art/gather_trajectories.py:85\u001b[39m, in \u001b[36mgather_trajectories\u001b[39m\u001b[34m(groups, pbar_desc, pbar_total_completion_tokens, return_exceptions, stream_chat_completions, streaming_chat_completions_dir, clear_streaming_chat_completions_dir)\u001b[39m\n\u001b[32m     78\u001b[39m context = GroupsContext(\n\u001b[32m     79\u001b[39m     pbar=tqdm.tqdm(desc=pbar_desc, total=total),\n\u001b[32m     80\u001b[39m     pbar_total_completion_tokens=pbar_total_completion_tokens,\n\u001b[32m     81\u001b[39m     should_stream=\u001b[38;5;28miter\u001b[39m(cycle(should_stream)),\n\u001b[32m     82\u001b[39m     streaming_chat_completions_dir=streaming_chat_completions_dir,\n\u001b[32m     83\u001b[39m )\n\u001b[32m     84\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m set_groups_context(context):\n\u001b[32m---> \u001b[39m\u001b[32m85\u001b[39m     result_groups = \u001b[38;5;28;01mawait\u001b[39;00m asyncio.gather(\n\u001b[32m     86\u001b[39m         *[\n\u001b[32m     87\u001b[39m             asyncio.gather(\n\u001b[32m     88\u001b[39m                 *[wrap_coroutine(c) \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m g], return_exceptions=return_exceptions\n\u001b[32m     89\u001b[39m             )\n\u001b[32m     90\u001b[39m             \u001b[38;5;28;01mfor\u001b[39;00m g \u001b[38;5;129;01min\u001b[39;00m groups\n\u001b[32m     91\u001b[39m         ]\n\u001b[32m     92\u001b[39m     )\n\u001b[32m     93\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m context.pbar \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m     94\u001b[39m     context.pbar.close()\n",
-      "\u001b[31mCancelledError\u001b[39m: "
+      "\u001b[31mHTTPStatusError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 66\u001b[39m\n\u001b[32m     42\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28;01mawait\u001b[39;00m model.get_iteration(), \u001b[32m1_000\u001b[39m):\n\u001b[32m     43\u001b[39m     train_groups = \u001b[38;5;28;01mawait\u001b[39;00m art.gather_trajectories(\n\u001b[32m     44\u001b[39m         (\n\u001b[32m     45\u001b[39m             (rollout(openai_client, prompt) \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m32\u001b[39m))\n\u001b[32m   (...)\u001b[39m\u001b[32m     64\u001b[39m         stream_chat_completions=\u001b[32m8\u001b[39m,\n\u001b[32m     65\u001b[39m     )\n\u001b[32m---> \u001b[39m\u001b[32m66\u001b[39m     \u001b[38;5;28;01mawait\u001b[39;00m model.tune(\n\u001b[32m     67\u001b[39m         train_groups,\n\u001b[32m     68\u001b[39m         config=art.TuneConfig(\n\u001b[32m     69\u001b[39m             sequence_length=\u001b[32m8192\u001b[39m, plot_tensors=\u001b[38;5;28;01mFalse\u001b[39;00m, verbosity=\u001b[32m2\u001b[39m\n\u001b[32m     70\u001b[39m         ),\n\u001b[32m     71\u001b[39m     )\n\u001b[32m     72\u001b[39m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/sky_workdir/src/art/model.py:104\u001b[39m, in \u001b[36mModel.tune\u001b[39m\u001b[34m(self, trajectory_groups, config)\u001b[39m\n\u001b[32m     91\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mtune\u001b[39m(\n\u001b[32m     92\u001b[39m     \u001b[38;5;28mself\u001b[39m,\n\u001b[32m     93\u001b[39m     trajectory_groups: \u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mlist\u001b[39m[Trajectory | \u001b[38;5;167;01mBaseException\u001b[39;00m]],\n\u001b[32m     94\u001b[39m     config: TuneConfig = TuneConfig(),\n\u001b[32m     95\u001b[39m ) -> \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m     96\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     97\u001b[39m \u001b[33;03m    Reinforce fine-tune the model with a batch of trajectory groups.\u001b[39;00m\n\u001b[32m     98\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    102\u001b[39m \u001b[33;03m            loss, other hyperparameters, logging, etc.\u001b[39;00m\n\u001b[32m    103\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m104\u001b[39m     \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m.api._tune_model(\u001b[38;5;28mself\u001b[39m, trajectory_groups, config)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/sky_workdir/src/art/unsloth/api.py:298\u001b[39m, in \u001b[36mUnslothAPI._tune_model\u001b[39m\u001b[34m(self, model, trajectory_groups, config)\u001b[39m\n\u001b[32m    294\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m    295\u001b[39m disk_packed_tensors = packed_tensors_to_dir(\n\u001b[32m    296\u001b[39m     packed_tensors, \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m._get_output_dir(model.name)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/tensors\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    297\u001b[39m )\n\u001b[32m--> \u001b[39m\u001b[32m298\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m service.tune(disk_packed_tensors, config)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/sky_workdir/src/art/model_service/__init__.py:195\u001b[39m, in \u001b[36mModelService.serve.<locals>.tune\u001b[39m\u001b[34m(disk_packed_tensors, config)\u001b[39m\n\u001b[32m    184\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mtune\u001b[39m(\n\u001b[32m    185\u001b[39m     disk_packed_tensors: \u001b[33m\"\u001b[39m\u001b[33mDiskPackedTensors\u001b[39m\u001b[33m\"\u001b[39m, config: types.TuneConfig\n\u001b[32m    186\u001b[39m ) -> \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    187\u001b[39m     response = \u001b[38;5;28;01mawait\u001b[39;00m client.post(\n\u001b[32m    188\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33m/tune\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    189\u001b[39m         json={\n\u001b[32m   (...)\u001b[39m\u001b[32m    193\u001b[39m         timeout=httpx.Timeout(\u001b[38;5;28;01mNone\u001b[39;00m),\n\u001b[32m    194\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m195\u001b[39m     \u001b[43mresponse\u001b[49m\u001b[43m.\u001b[49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/sky_workdir/.venv/lib/python3.12/site-packages/httpx/_models.py:829\u001b[39m, in \u001b[36mResponse.raise_for_status\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    827\u001b[39m error_type = error_types.get(status_class, \u001b[33m\"\u001b[39m\u001b[33mInvalid status code\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    828\u001b[39m message = message.format(\u001b[38;5;28mself\u001b[39m, error_type=error_type)\n\u001b[32m--> \u001b[39m\u001b[32m829\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m HTTPStatusError(message, request=request, response=\u001b[38;5;28mself\u001b[39m)\n",
+      "\u001b[31mHTTPStatusError\u001b[39m: Client error '422 Unprocessable Entity' for url 'http://localhost:8089/tune'\nFor more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/422"
      ]
     }
    ],
@@ -376,7 +239,8 @@
     "            config=art.TuneConfig(\n",
     "                sequence_length=8192, plot_tensors=False, verbosity=2\n",
     "            ),\n",
-    "        )"
+    "        )\n",
+    "        break"
    ]
   }
  ],
