fix: Request logprobs

--- a/examples/tic-tac-toe.ipynb
+++ b/examples/tic-tac-toe.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,17 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OpenPipe client initialized\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import art\n",
     "from dotenv import load_dotenv\n",
@@ -507,7 +499,7 @@
     "\n",
     "async def rollout(\n",
     "    client: openai.AsyncOpenAI, iteration: int, is_validation: bool\n",
-    ") -> list[art.Trajectory]:\n",
+    ") -> art.Trajectory:\n",
     "\n",
     "    game = generate_game()\n",
     "\n",
@@ -539,6 +531,7 @@
     "\n",
     "        async def get_completion():\n",
     "            return await client.beta.chat.completions.parse(\n",
+    "                logprobs=True,\n",
     "                messages=messages,\n",
     "                model=model.name,\n",
     "                response_format=AgentMove,\n",
@@ -599,7 +592,7 @@
     "    elif winner == \"draw\":\n",
     "        trajectory.reward = 0.5\n",
     "\n",
-    "    return [trajectory] if any(isinstance(message, art.Trajectory) for message in trajectory.messages_and_choices) else []\n",
+    "    return trajectory\n",
     "\n",
     "\n",
     "stride = 32\n",
