chore: Update model configurations and improve training parameters

--- a/dev/yes-and-no-unsloth.ipynb
+++ b/dev/yes-and-no-unsloth.ipynb
@@ -65,7 +65,8 @@
     "api = art.UnslothAPI(wandb_project=\"agent-reinforcement-training\")\n",
     "model = await api._get_or_create_model(\n",
     "    name=\"yes-or-no-unsloth-001\",\n",
-    "    base_model=\"unsloth/Qwen2.5-14B-Instruct\",\n",
+    "    base_model=\"Qwen/Qwen2.5-14B-Instruct\",\n",
+    "    _config={\"init_args\": {\"max_seq_length\": 32768, \"gpu_memory_utilization\": 0.6}},\n",
     ")\n",
     "\n",
     "\n",
@@ -93,66 +94,36 @@
     "    return art.Trajectory(messages_and_choices=[*messages, choice], reward=reward)\n",
     "\n",
     "\n",
+    "prompts = [\n",
+    "    f\"{prefix} with {', '.join([f\"'{w}'\" if use_quotes else w for w in words]) if len(words) == 3 else f'{words[0]}' + (f' or {words[1]}' if len(words) > 1 else '')}\"\n",
+    "    for prefix in [\"respond\", \"just respond\"]\n",
+    "    for use_quotes in [True, False]\n",
+    "    for words in [\n",
+    "        [\"yes\", \"no\", \"maybe\"],\n",
+    "        [\"maybe\", \"yes\", \"no\"],\n",
+    "        [\"no\", \"yes\", \"maybe\"],\n",
+    "        [\"yes\", \"maybe\", \"no\"],\n",
+    "        [\"yes\", \"no\"],\n",
+    "        [\"maybe\", \"no\"],\n",
+    "        [\"no\", \"maybe\"],\n",
+    "        [\"no\", \"yes\"],\n",
+    "        [\"yes\", \"no\"],\n",
+    "    ]\n",
+    "]\n",
+    "\n",
     "openai_client = await model.openai_client()\n",
     "for i in range(await model.get_iteration(), 1_000):\n",
     "    train_groups = await art.gather_trajectories(\n",
-    "        (\n",
-    "            (rollout(openai_client, prompt) for _ in range(32))\n",
-    "            for prompt in [\n",
-    "                f\"{prefix} with {', '.join([f\"'{w}'\" if use_quotes else w for w in words]) if len(words) == 3 else f'{words[0]}' + (f' or {words[1]}' if len(words) > 1 else '')}\"\n",
-    "                for prefix in [\"respond\", \"just respond\"]\n",
-    "                for use_quotes in [True, False]\n",
-    "                for words in [\n",
-    "                    [\"yes\", \"no\", \"maybe\"],\n",
-    "                    [\"maybe\", \"yes\", \"no\"],\n",
-    "                    [\"no\", \"yes\", \"maybe\"],\n",
-    "                    [\"yes\", \"maybe\", \"no\"],\n",
-    "                    [\"yes\", \"no\"],\n",
-    "                    [\"maybe\", \"no\"],\n",
-    "                    [\"no\", \"maybe\"],\n",
-    "                    [\"no\", \"yes\"],\n",
-    "                    [\"yes\", \"no\"],\n",
-    "                ]\n",
-    "            ]\n",
-    "        ),\n",
+    "        ((rollout(openai_client, prompt) for _ in range(32)) for prompt in prompts),\n",
     "        pbar_desc=\"train\",\n",
     "        stream_chat_completions=8,\n",
     "    )\n",
     "    await model.tune(\n",
     "        train_groups,\n",
     "        config=art.TuneConfig(\n",
-    "            lr=1e-4, sequence_length=8192, plot_tensors=False, verbosity=2\n",
+    "            lr=1e-4, sequence_length=32768, plot_tensors=False, verbosity=2\n",
     "        ),\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.cleanup_function()>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import atexit\n",
-    "\n",
-    "\n",
-    "def cleanup_function():\n",
-    "    with open(\"./test.txt\", \"w\") as f:\n",
-    "        f.write(\"test\")\n",
-    "    # Your cleanup code here\n",
-    "\n",
-    "\n",
-    "atexit.register(cleanup_function)"
    ]
   }
  ],
