chore: Update imports

--- a/dev/unsloth.ipynb
+++ b/dev/unsloth.ipynb
@@ -120,17 +120,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO 04-03 15:00:50 [__init__.py:239] Automatically detected platform cuda.\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/gcpuser/sky_workdir/src/art/unsloth/state.py:2: UserWarning: WARNING: Unsloth should be imported before transformers to ensure all optimizations are applied. Your code may run slower or encounter memory issues without these optimizations.\n",
+      "/tmp/ipykernel_43528/3218684475.py:2: UserWarning: WARNING: Unsloth should be imported before transformers, peft to ensure all optimizations are applied. Your code may run slower or encounter memory issues without these optimizations.\n",
       "\n",
       "Please restructure your imports with 'import unsloth' at the top of your file.\n",
       "  import unsloth\n"
@@ -142,6 +135,7 @@
      "text": [
       "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n",
       "🦥 Unsloth Zoo will now patch everything to make training faster!\n",
+      "INFO 04-03 15:55:12 [__init__.py:239] Automatically detected platform cuda.\n",
       "==((====))==  Unsloth 2025.3.18: Fast Qwen2 patching. Transformers: 4.49.0. vLLM: 0.8.2.\n",
       "   \\\\   /|    NVIDIA H100 80GB HBM3. Num GPUs = 1. Max memory: 79.109 GB. Platform: Linux.\n",
       "O^O/ \\_/ \\    Torch: 2.6.0+cu124. CUDA: 9.0. CUDA Toolkit: 12.4. Triton: 3.2.0\n",
@@ -152,21 +146,21 @@
       "Unsloth: Your GPU has CUDA compute capability 9.0 with VRAM = 79.11 GB.\n",
       "Unsloth: Using conservativeness = 1.0. Chunked prefill tokens = 32768. Num Sequences = 320.\n",
       "Unsloth: vLLM's KV Cache can use up to 33.39 GB. Also swap space = 6 GB.\n",
-      "INFO 04-03 15:01:00 [config.py:585] This model supports multiple tasks: {'generate', 'embed', 'score', 'classify', 'reward'}. Defaulting to 'generate'.\n",
+      "INFO 04-03 15:55:23 [config.py:585] This model supports multiple tasks: {'score', 'reward', 'generate', 'classify', 'embed'}. Defaulting to 'generate'.\n",
       "Unsloth: vLLM Bitsandbytes config using kwargs = {'load_in_8bit': False, 'load_in_4bit': True, 'bnb_4bit_compute_dtype': 'bfloat16', 'bnb_4bit_quant_storage': 'uint8', 'bnb_4bit_quant_type': 'nf4', 'bnb_4bit_use_double_quant': True, 'llm_int8_enable_fp32_cpu_offload': False, 'llm_int8_has_fp16_weight': False, 'llm_int8_skip_modules': ['lm_head', 'multi_modal_projector', 'merger', 'modality_projection', 'model.layers.0.self_attn', 'model.layers.1.self_attn', 'model.layers.2.mlp', 'model.layers.3.mlp', 'model.layers.4.mlp', 'model.layers.25.mlp', 'model.layers.26.mlp'], 'llm_int8_threshold': 6.0}\n",
-      "INFO 04-03 15:01:00 [llm_engine.py:241] Initializing a V0 LLM engine (v0.8.2) with config: model='unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit', speculative_config=None, tokenizer='unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit', skip_tokenizer_init=False, tokenizer_mode=auto, revision=None, override_neuron_config=None, tokenizer_revision=None, trust_remote_code=False, dtype=torch.bfloat16, max_seq_len=32768, download_dir=None, load_format=LoadFormat.BITSANDBYTES, tensor_parallel_size=1, pipeline_parallel_size=1, disable_custom_all_reduce=False, quantization=bitsandbytes, enforce_eager=False, kv_cache_dtype=auto,  device_config=cuda:0, decoding_config=DecodingConfig(guided_decoding_backend='xgrammar', reasoning_backend=None), observability_config=ObservabilityConfig(show_hidden_metrics=False, otlp_traces_endpoint=None, collect_model_forward_time=False, collect_model_execute_time=False), seed=0, served_model_name=unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit, num_scheduler_steps=16, multi_step_stream_outputs=True, enable_prefix_caching=True, chunked_prefill_enabled=False, use_async_output_proc=True, disable_mm_preprocessor_cache=False, mm_processor_kwargs=None, pooler_config=None, compilation_config={\"level\":0,\"splitting_ops\":[],\"compile_sizes\":[],\"cudagraph_capture_sizes\":[320,312,304,296,288,280,272,264,256,248,240,232,224,216,208,200,192,184,176,168,160,152,144,136,128,120,112,104,96,88,80,72,64,56,48,40,32,24,16,8,4,2,1],\"max_capture_size\":320}, use_cached_outputs=False, \n",
-      "INFO 04-03 15:01:01 [cuda.py:291] Using Flash Attention backend.\n",
-      "WARNING 04-03 15:01:01 [registry.py:337] `mm_limits` has already been set for model=unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit, and will be overwritten by the new values.\n",
-      "INFO 04-03 15:01:01 [parallel_state.py:954] rank 0 in world size 1 is assigned as DP rank 0, PP rank 0, TP rank 0\n",
-      "INFO 04-03 15:01:01 [model_runner.py:1110] Starting to load model unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit...\n",
-      "INFO 04-03 15:01:02 [loader.py:1155] Loading weights with BitsAndBytes quantization. May take a while ...\n",
-      "INFO 04-03 15:01:02 [weight_utils.py:265] Using model weights format ['*.safetensors']\n"
+      "INFO 04-03 15:55:23 [llm_engine.py:241] Initializing a V0 LLM engine (v0.8.2) with config: model='unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit', speculative_config=None, tokenizer='unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit', skip_tokenizer_init=False, tokenizer_mode=auto, revision=None, override_neuron_config=None, tokenizer_revision=None, trust_remote_code=False, dtype=torch.bfloat16, max_seq_len=32768, download_dir=None, load_format=LoadFormat.BITSANDBYTES, tensor_parallel_size=1, pipeline_parallel_size=1, disable_custom_all_reduce=False, quantization=bitsandbytes, enforce_eager=False, kv_cache_dtype=auto,  device_config=cuda:0, decoding_config=DecodingConfig(guided_decoding_backend='xgrammar', reasoning_backend=None), observability_config=ObservabilityConfig(show_hidden_metrics=False, otlp_traces_endpoint=None, collect_model_forward_time=False, collect_model_execute_time=False), seed=0, served_model_name=unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit, num_scheduler_steps=16, multi_step_stream_outputs=True, enable_prefix_caching=True, chunked_prefill_enabled=False, use_async_output_proc=True, disable_mm_preprocessor_cache=False, mm_processor_kwargs=None, pooler_config=None, compilation_config={\"level\":0,\"splitting_ops\":[],\"compile_sizes\":[],\"cudagraph_capture_sizes\":[320,312,304,296,288,280,272,264,256,248,240,232,224,216,208,200,192,184,176,168,160,152,144,136,128,120,112,104,96,88,80,72,64,56,48,40,32,24,16,8,4,2,1],\"max_capture_size\":320}, use_cached_outputs=False, \n",
+      "INFO 04-03 15:55:24 [cuda.py:291] Using Flash Attention backend.\n",
+      "WARNING 04-03 15:55:24 [registry.py:337] `mm_limits` has already been set for model=unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit, and will be overwritten by the new values.\n",
+      "INFO 04-03 15:55:24 [parallel_state.py:954] rank 0 in world size 1 is assigned as DP rank 0, PP rank 0, TP rank 0\n",
+      "INFO 04-03 15:55:24 [model_runner.py:1110] Starting to load model unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit...\n",
+      "INFO 04-03 15:55:24 [loader.py:1155] Loading weights with BitsAndBytes quantization. May take a while ...\n",
+      "INFO 04-03 15:55:25 [weight_utils.py:265] Using model weights format ['*.safetensors']\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d497ac5464f4bb7bc3d326537ea28f2",
+       "model_id": "51d4754ed0d14aa68b54b8b2b1fe1754",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e6a05d10da94b0e904e86fb8f001b0d",
+       "model_id": "43bd97d036e24259a47062fb9a1215fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -195,29 +189,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 04-03 15:01:05 [punica_selector.py:18] Using PunicaWrapperGPU.\n",
-      "INFO 04-03 15:01:05 [model_runner.py:1146] Model loading took 6.7357 GB and 3.102883 seconds\n",
-      "INFO 04-03 15:01:07 [worker.py:267] Memory profiling takes 2.20 seconds\n",
-      "INFO 04-03 15:01:07 [worker.py:267] the current vLLM instance can use total_gpu_memory (79.11GiB) x gpu_memory_utilization (0.50) = 39.25GiB\n",
-      "INFO 04-03 15:01:07 [worker.py:267] model weights take 6.74GiB; non_torch_memory takes 0.15GiB; PyTorch activation peak memory takes 4.72GiB; the rest of the memory reserved for KV Cache is 27.65GiB.\n",
-      "INFO 04-03 15:01:08 [executor_base.py:111] # cuda blocks: 32352, # CPU blocks: 7021\n",
-      "INFO 04-03 15:01:08 [executor_base.py:116] Maximum concurrency for 32768 tokens per request: 15.80x\n",
-      "INFO 04-03 15:01:10 [model_runner.py:1442] Capturing cudagraphs for decoding. This may lead to unexpected consequences if the model is not static. To run the model in eager mode, set 'enforce_eager=True' or use '--enforce-eager' in the CLI. If out-of-memory error occurs during cudagraph capture, consider decreasing `gpu_memory_utilization` or switching to eager mode. You can also reduce the `max_num_seqs` as needed to decrease memory usage.\n"
+      "INFO 04-03 15:55:28 [punica_selector.py:18] Using PunicaWrapperGPU.\n",
+      "INFO 04-03 15:55:28 [model_runner.py:1146] Model loading took 6.7357 GB and 3.571700 seconds\n",
+      "INFO 04-03 15:55:30 [worker.py:267] Memory profiling takes 2.21 seconds\n",
+      "INFO 04-03 15:55:30 [worker.py:267] the current vLLM instance can use total_gpu_memory (79.11GiB) x gpu_memory_utilization (0.50) = 39.25GiB\n",
+      "INFO 04-03 15:55:30 [worker.py:267] model weights take 6.74GiB; non_torch_memory takes 0.15GiB; PyTorch activation peak memory takes 4.72GiB; the rest of the memory reserved for KV Cache is 27.65GiB.\n",
+      "INFO 04-03 15:55:31 [executor_base.py:111] # cuda blocks: 32352, # CPU blocks: 7021\n",
+      "INFO 04-03 15:55:31 [executor_base.py:116] Maximum concurrency for 32768 tokens per request: 15.80x\n",
+      "INFO 04-03 15:55:33 [model_runner.py:1442] Capturing cudagraphs for decoding. This may lead to unexpected consequences if the model is not static. To run the model in eager mode, set 'enforce_eager=True' or use '--enforce-eager' in the CLI. If out-of-memory error occurs during cudagraph capture, consider decreasing `gpu_memory_utilization` or switching to eager mode. You can also reduce the `max_num_seqs` as needed to decrease memory usage.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Capturing CUDA graph shapes: 100%|██████████| 43/43 [00:27<00:00,  1.54it/s]"
+      "Capturing CUDA graph shapes: 100%|██████████| 43/43 [00:27<00:00,  1.55it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 04-03 15:01:38 [model_runner.py:1570] Graph capturing finished in 28 secs, took 4.29 GiB\n",
-      "INFO 04-03 15:01:38 [llm_engine.py:447] init engine (profile, create kv cache, warmup model) took 32.99 seconds\n"
+      "INFO 04-03 15:56:01 [model_runner.py:1570] Graph capturing finished in 28 secs, took 4.29 GiB\n",
+      "INFO 04-03 15:56:01 [llm_engine.py:447] init engine (profile, create kv cache, warmup model) took 32.86 seconds\n"
      ]
     },
     {
@@ -230,7 +224,8 @@
     }
    ],
    "source": [
-    "# import unsloth\n",
+    "import peft\n",
+    "import unsloth\n",
     "import os\n",
     "from art.config.model import get_model_config, ModelConfig\n",
     "from art.unsloth.state import ModelState\n",
@@ -249,10 +244,27 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO 04-03 15:56:18 [worker.py:133] Sleep mode freed 35.53 GiB memory, 5.19 GiB memory is still in use.\n",
+      "INFO 04-03 15:56:18 [executor_base.py:208] It took 5.157829 seconds to fall asleep.\n"
+     ]
+    }
+   ],
+   "source": [
+    "await state.vllm.async_engine.sleep()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "from typing import Optional, Union, Tuple\n",
     "from vllm.device_allocator.cumem import (\n",
     "    create_and_map,\n",
     "    CuMemAllocator,\n",
@@ -273,7 +285,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sleep(offload_tags: Optional[Union[Tuple[str, ...], str]] = None) -> None:\n",
+    "import ctypes\n",
+    "\n",
+    "offload_to_disk = True\n",
+    "\n",
+    "\n",
+    "def sleep(offload_tags: tuple[str, ...] | str | None = None) -> None:\n",
     "    \"\"\"\n",
     "    Put the allocator in sleep mode.\n",
     "    All data in the memory allocation with the specified tag will be\n",
@@ -296,14 +313,29 @@
     "            continue\n",
     "        handle = data.handle\n",
     "        size_in_bytes = handle[1]\n",
-    "        cpu_backup_tensor = torch.empty(\n",
-    "            size_in_bytes,\n",
-    "            dtype=torch.uint8,\n",
-    "            device=\"cpu\",\n",
-    "            pin_memory=is_pin_memory_available(),\n",
-    "        )\n",
+    "\n",
+    "        if offload_to_disk:\n",
+    "            # Use torch.from_file for disk offloading\n",
+    "            cpu_backup_tensor = torch.from_file(\n",
+    "                f\"/tmp/kv-cache-{ptr}.pt\",\n",
+    "                size=size_in_bytes,\n",
+    "                dtype=torch.uint8,\n",
+    "                device=\"cpu\",\n",
+    "                shared=True,\n",
+    "            )\n",
+    "        else:\n",
+    "            # Initialize as usual for CPU offloading\n",
+    "            cpu_backup_tensor = torch.empty(\n",
+    "                size_in_bytes,\n",
+    "                dtype=torch.uint8,\n",
+    "                device=\"cpu\",\n",
+    "                pin_memory=is_pin_memory_available(),\n",
+    "            )\n",
+    "\n",
     "        cpu_ptr = cpu_backup_tensor.data_ptr()\n",
-    "        libcudart.cudaMemcpy(cpu_ptr, ptr, size_in_bytes)\n",
+    "        libcudart.cudaMemcpy(\n",
+    "            ctypes.c_void_p(cpu_ptr), ctypes.c_void_p(ptr), size_in_bytes\n",
+    "        )\n",
     "        data.cpu_backup_tensor = cpu_backup_tensor\n",
     "        unmap_and_release(handle)\n",
     "\n",
@@ -325,7 +357,9 @@
     "                    cpu_backup_tensor.numel() * cpu_backup_tensor.element_size()\n",
     "                )\n",
     "                cpu_ptr = cpu_backup_tensor.data_ptr()\n",
-    "                libcudart.cudaMemcpy(ptr, cpu_ptr, size_in_bytes)\n",
+    "                libcudart.cudaMemcpy(\n",
+    "                    ctypes.c_void_p(ptr), ctypes.c_void_p(cpu_ptr), size_in_bytes\n",
+    "                )\n",
     "                data.cpu_backup_tensor = None\n",
     "\n",
     "\n",
@@ -335,15 +369,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO 04-03 15:04:43 [worker.py:133] Sleep mode freed 27.67 GiB memory, 13.11 GiB memory is still in use.\n",
-      "INFO 04-03 15:04:43 [executor_base.py:208] It took 1.052417 seconds to fall asleep.\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -353,14 +390,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 04-03 15:15:39 [executor_base.py:219] It took 1.080271 seconds to wake up.\n"
+      "INFO 04-03 15:35:58 [executor_base.py:219] It took 3.868756 seconds to wake up.\n"
      ]
     }
    ],
