refactor: Update offloading mechanism in unsloth.ipynb to use Literal type for offload options

--- a/dev/unsloth.ipynb
+++ b/dev/unsloth.ipynb
@@ -286,8 +286,9 @@
    "outputs": [],
    "source": [
     "import ctypes\n",
+    "from typing import Literal\n",
     "\n",
-    "offload_to_disk = True\n",
+    "offload_to: Literal[\"cpu\", \"disk\", \"none\"] = \"cpu\"\n",
     "\n",
     "\n",
     "def sleep(offload_tags: tuple[str, ...] | str | None = None) -> None:\n",
@@ -311,32 +312,31 @@
     "    for ptr, data in allocator.pointer_to_data.items():\n",
     "        if data.tag != \"kv_cache\":\n",
     "            continue\n",
-    "        handle = data.handle\n",
-    "        size_in_bytes = handle[1]\n",
+    "        if offload_to != \"none\":\n",
+    "            handle = data.handle\n",
+    "            size_in_bytes = handle[1]\n",
     "\n",
-    "        if offload_to_disk:\n",
-    "            # Use torch.from_file for disk offloading\n",
-    "            cpu_backup_tensor = torch.from_file(\n",
-    "                f\"/tmp/kv-cache-{ptr}.pt\",\n",
-    "                size=size_in_bytes,\n",
-    "                dtype=torch.uint8,\n",
-    "                device=\"cpu\",\n",
-    "                shared=True,\n",
-    "            )\n",
-    "        else:\n",
-    "            # Initialize as usual for CPU offloading\n",
-    "            cpu_backup_tensor = torch.empty(\n",
-    "                size_in_bytes,\n",
-    "                dtype=torch.uint8,\n",
-    "                device=\"cpu\",\n",
-    "                pin_memory=is_pin_memory_available(),\n",
-    "            )\n",
+    "            if offload_to == \"disk\":\n",
+    "                cpu_backup_tensor = torch.from_file(\n",
+    "                    f\"/tmp/kv-cache-{ptr}.pt\",\n",
+    "                    size=size_in_bytes,\n",
+    "                    dtype=torch.uint8,\n",
+    "                    device=\"cpu\",\n",
+    "                    shared=True,\n",
+    "                )\n",
+    "            else:\n",
+    "                cpu_backup_tensor = torch.empty(\n",
+    "                    size_in_bytes,\n",
+    "                    dtype=torch.uint8,\n",
+    "                    device=\"cpu\",\n",
+    "                    pin_memory=is_pin_memory_available(),\n",
+    "                )\n",
     "\n",
-    "        cpu_ptr = cpu_backup_tensor.data_ptr()\n",
-    "        libcudart.cudaMemcpy(\n",
-    "            ctypes.c_void_p(cpu_ptr), ctypes.c_void_p(ptr), size_in_bytes\n",
-    "        )\n",
-    "        data.cpu_backup_tensor = cpu_backup_tensor\n",
+    "            cpu_ptr = cpu_backup_tensor.data_ptr()\n",
+    "            libcudart.cudaMemcpy(\n",
+    "                ctypes.c_void_p(cpu_ptr), ctypes.c_void_p(ptr), size_in_bytes\n",
+    "            )\n",
+    "            data.cpu_backup_tensor = cpu_backup_tensor\n",
     "        unmap_and_release(handle)\n",
     "\n",
     "\n",
